recommit parser without sample data

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,30 @@
+/logs
+*.log
+out
+bin/
 target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
+
+#Eclipse
+.classpath
+.project
+.settings/
+
+#IntelliJ
+.idea/
+*.iml
+*.iws
+
+#Misc
+tmp/**
+tmp/**/*
+*.swp
+.loadpath
+.metadata
+.launch
+.buildpath
+
+#Mac OS
+.DS_Store
+
+#Project
+/src/main/bin/
